<pre>
2007-xx-xx:
	* version 0.6
	* THIS VERSION ONLY WORKS WITH FIREFOX 3.0
	* "d", "D" and :bdelete support count now
	* :back/:forward can use tabcompletion
	* :undoall support, and tabcompletion for :undo <tab>
	* new :redraw and Ctrl-L commands for forced redrawing of the screen
	* added new 'laststatus' option and removed "s" value from 'guioptions'
	* Tab-completion improvements for :javascript and :open
	* IMPORTANT: changed semantics of :echo and :echoerr: Strings must be quoted with " or ' now,
	  but you can do things like :echo 3+2 or :echo window.document now
	* statusline is now white on black with bold font by default (like in (g)vim)
	  (change with userChrome.css if you don't like it until we have :colorscheme)
	* :let mapleader=","  and <Leader> in :map support
	* added new :let and :unlet commands
	* :b2 now allowed, no space required before the 2 anymore
	* :! to run commands through system()
	* separated search and Ex command history
	* merge the existing status bar with the standard FF status bar so that
	  security information and extension buttons are included
	* added full zoom, and changed keybindings slightly for text zoom
	* :buffer partial_string works now as in vim, and with ! even better
	* new :time command for profiling
	* added new :sidebar and :sbclose commands
	* added 'more' and standard more-prompt key mappings to control
	  behaviour of the message list pager 
	* added 'hlsearchstyle' option to allow for user CSS styling of the
	  highlighted text strings when 'hlsearch' is set
	* added 'linksearch' option to restrict page searches to link text - \L
	  and \l can be used in the search pattern to override 'linksearch'
	* improvements for scrollable -- more -- prompt
	* changed 'I' key to Ctrl-Q to also work in textboxes
	* sites like msn.com or yahoo.com don't focus search field anymore on keydown
	* new gi browser command to focus last used input box