@@ -2,6 +2,8 @@
 2007-xx-xx:
 	* version 0.6
 	* THIS VERSION ONLY WORKS WITH FIREFOX 3.0
+	* added "s" and "a" mappings to extended hints mode for saving hint
+	  targets
 	* "d", "D" and :bdelete support count now
 	* :back/:forward can use tabcompletion
 	* :undoall support, and tabcompletion for :undo <tab>
